Add an icon. Change the behavior when clicking Run. Change the prob table of nodes without parents.